--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ MarkupSafe==2.0.1
 matplotlib==3.5.1
 mccabe==0.6.1
 mysql-connector==2.2.9
+mysql.connector==2.2.9
 mysql-connector-python==8.0.27
 numpy==1.21.3
 packaging==21.3
@@ -77,3 +78,4 @@ virtualenvwrapper-win==1.2.6
 Werkzeug==2.0.2
 wrapt==1.12.1
 WTForms==2.3.3
+
